# vanilla-roll

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci-testing.yml  publish.yml
examples/render_rotation/: README.md  main.py  requirements.txt
tests/: conftest.py  test_anatomy_orientation.py  test_array_api.py  test_array_api_extra.py  test_camera.py  test_geometry.py  test_validation.py
vanilla_roll/: __init__.py  anatomy_orientation.py  array_api.py  array_api_extra.py  array_api_image.py  backend.py  camera.py  camera_sequence.py  geometry.py  rendering.py  usecase.py  util.py  validation.py  volume.py
vanilla_roll/array_api/: __init__.py  cupy.py  numpy.py  pytorch.py
vanilla_roll/array_api_extra/: __init__.py  cupy.py  numpy.py  pytorch.py  type.py
vanilla_roll/geometry/: conversion.py  element.py  linalg.py
vanilla_roll/io/: __init__.py  dicom.py  mha.py  nifti.py
vanilla_roll/rendering/: __init__.py  accumulation.py  algorithm.py  composition.py  image_proc.py  mode.py  orthogonal_raycast.py  orthogonal_sampling.py  orthogonal_shear_warp.py  projection.py  rendering.py  transfer_function.py  types.py
