[tool.poetry]
name = "vanilla-roll"
version = "0.0.0"
description = "A simple array based volume renderer"
authors = ["Masahiro Wada <argon.argon.argon@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/ar90n/vanilla_roll"
readme = "README.md"
keywords = ["array-api", "volume rendering"]
include = ["vanilla_roll/py.typed"]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.0"

metaimageio = {version = "^1.0.0", optional = true}
torch = {version = "^1.8.0", optional = true}
nibabel = {version = "^5.0.0", optional = true}
pydicom = {version = "^2.3.0", optional = true}
cupy = {version = "^11.2.0", optional = true}

[tool.poetry.extras]
torch = ["torch"]
cupy = ["cupy"]
dicom = ["pydicom"]
mha = ["metaimageio"]
nifti = ["nibabel"]

[tool.poetry.group.dev.dependencies]
joblib = "^1.1.0"
poethepoet = "^0.19.0"
pyright = "^1.1.238"
pytest = "^7.1.1"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.0"
pytest-black = "^0.3.12"
pre-commit = "^2.18.1"
conventional-commit = "^0.4.2"
isort = "^5.10.1"
flake8 = "^6.0.0"
commitizen = "^2.27.0"
ipykernel = "^6.13.0"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
secondary = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.isort]
profile = "black"

[tool.pyright]
include = ["vanilla_roll", "tests"]
stubPath ="stubs"
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "Linux"

[tool.pytest.ini_options]
addopts = "--strict --durations=0 --color=yes --doctest-modules"
testpaths = ["vanilla_roll", "tests"]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poe.tasks]
test = "pytest"
check = { shell = "pre-commit run -a && pyright" }
install-all-extras = "poetry install --all-extras"
install-all-cpu = "poetry install --extras 'torch dicom mha nifti'"
install-pre-commit = "pre-commit install"
